# ProjSe

./: LICENSE  README.md  pyproject.toml
examples/: example_selection_by_projectors.py  experiment_carcinom_glioma.py  experiment_large_scale_sythetic.py  experiment_vv_output.py
src/ProjSe/: __init__.py  __init__.py~  selection_by_projectors_kernel_021.py  selection_by_projectors_kernel_022.py  selection_by_projectors_kernel_023.py  selection_by_projectors_kernel_024.py  selection_by_projectors_kernel_025.py
