[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build" 

[project]
name = "ProjSe"
version = "0.25"
author = [{name = "Sandor Szedmak", email = "sandor.szedmak@aalto.fi"}]
description = "Supervised variables selection by projection operators in kernel space"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy>=1.20.0"]

[project.urls]
"Homepage" = "https://github.com/aalto-ics-kepaco/ProjSe"
"Bug Tracker" = "https://github.com/aalto-ics-kepaco/ProjSe/issues"


